--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <title>Kitties Demo</title>
   <style>
     .viewport { width: 600px; height: 600px; }
-    canvas { position: absolute; }
+    .layer { position: absolute; }
   </style>
 </head>
 <body>
-  <div class="viewport" data-div-viewport></div>
+  <div class="viewport">
+    <canvas data-canvas-background class="layer" width="600" height="600"></canvas>
+    <canvas data-canvas-entities class="layer" width="600" height="600"></canvas>
+  </div>
   <script src="dist/kitties.js"></script>
   <script>
     var Scheduler;
@@ -23,48 +26,65 @@
     });
 
     use([
-      'clone Sprite', 
-      'clone Scene',
+      'Sprite', 
+      'Scene',
       'SpriteAnimation',
-      'SpriteLayer',
+      'EntityLayer',
       'BackgroundLayer',
       'Scheduler', 
-      'div-viewport'],
-    function(sprite, scene, SpriteAnimation, SpriteLayer, BackgroundLayer, Scheduler, viewportContainer) {
+      'ImageLoader',
+      'Common',
+      'canvas-background',
+      'canvas-entities'],
+    function(Sprite, Scene, SpriteAnimation, EntityLayer, BackgroundLayer, Scheduler, ImageLoader, Common, canvasBackground, canvasEntities) {
       'use strict';
 
-      var backgroundLayer = BackgroundLayer(600, 600);
-      viewportContainer.appendChild(backgroundLayer.getLayer());
+      var backgroundLayer = BackgroundLayer(canvasBackground);
+      var entityLayer = EntityLayer(canvasEntities);
 
-      var spriteLayer = SpriteLayer(600, 600);
-      viewportContainer.appendChild(spriteLayer.getLayer());
+      Scene('assets/kitty-world.json').then(function(scene) {
+        console.log(scene);
 
-      scene.load('assets/kitty-world.json').then(function(scene) {
-        backgroundLayer.setBackground(scene.layers.layer1.background);
-        Scheduler(function() {
-          backgroundLayer.draw();
-        });
+        var layerDefinitions = scene.layerDefinitions;
 
-        sprite.load('assets/kitty.json').then(function(sprite) {
-          console.log(sprite);
-          spriteAnimation = SpriteAnimation(sprite)
-            .play('run');
+        Object.keys(layerDefinitions)
+          .map(function(layerId) {
+            var backgroundUrl;
+            var layerDefinition = layerDefinitions[layerId];
 
-          spriteLayer.addSprite(spriteAnimation);
+            if(layerDefinition.backgroundUrl) {
+              backgroundUrl = (!Common.isFullUrl(layerDefinition.backgroundUrl)) ?
+                scene.baseUrl + '/' + layerDefinition.backgroundUrl : layerDefinition.backgroundUrl;
 
-          Scheduler(function() {
-            spriteLayer.draw();
+              ImageLoader(backgroundUrl)
+                .then(function(image) {
+                  backgroundLayer.setBackground(image);
+                  Scheduler(function() {
+                    backgroundLayer.draw();
+                  });
+                });
+            }
+
+            if(layerDefinition.sprites) {
+              Object.keys(layerDefinition.sprites).forEach(function(spriteId) {
+                Sprite('assets/kitty.json').then(function(sprite) {
+                  if(!sprite) {
+                    return;
+                  }
+                  console.log(sprite);
+                  spriteAnimation = SpriteAnimation(sprite).play('run');
+
+                  entityLayer.addEntity(spriteAnimation);
+                });
+              });                
+
+              Scheduler(function() {
+                entityLayer.draw();
+              });
+            }
           });
-        });
       });
     });
-
-    /*use(['Scheduler'], function(_Scheduler) {
-      Scheduler = _Scheduler;
-      foo = Scheduler.instance().schedule(function(deltaTime) {
-        console.log('abc');
-      });
-    });*/
   </script>
 </body>
 </html>
