--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         entityLayer.clear();
         resource = Sprites(layerDefinitions.entities.sprites)
           .ready(function (sprite) {
+            sprite.animation.play('run');
             entityLayer.addEntity(sprite);
           }, function() { console.log('ERROR!!')});
 
-        console.log(resource);
         collisionLayer.setColliders(layerDefinitions.collisions.colliders);
       });
     });
