--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <canvas data-canvas-entities class="layer" width="600" height="400"></canvas>
     <canvas data-canvas-colliders class="layer" width="600" height="400"></canvas>
   </div>
+  <script src="node_modules/whatwg-fetch/fetch.js"></script>
   <script src="dist/kitties.js"></script>
   <script>
 
